[tool.poetry]
name = "flight-searcher"
version = "0.1.0"
description = ""
authors = ["Jonathan D <jonathandown7@gmail.com>"]
readme = "README.md"
packages = [{include = "flight_searcher"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
